--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ovo&display=swap");
 *{
     margin: 0;
     padding: 0;
@@ -8,4 +9,5 @@
 
 body{
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
