--- a/index.css
+++ b/index.css
@@ -11,3 +11,19 @@ body{
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
+
+/* .section {
+    margin: 50px 0;
+    transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  
+  .section.active {
+    opacity: 1;
+    transform: translateX(0);
+  } */
+.box.active, .box-bg.active {
+  opacity: 1;
+  transform: translateX(0);
+}
