--- a/index.css
+++ b/index.css
@@ -12,18 +12,21 @@ body{
     scroll-behavior: smooth;
 }
 
-/* .section {
-    margin: 50px 0;
-    transition: transform 1s ease-in-out, opacity 1s ease-in-out;
-    opacity: 0;
-    transform: translateX(-100%);
-  }
-  
-  .section.active {
-    opacity: 1;
-    transform: translateX(0);
-  } */
-.box.active, .box-bg.active {
-  opacity: 1;
-  transform: translateX(0);
+.section{
+  height: auto;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 2;
+}
+
+.blog-section-wrapper {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
 }
