--- a/index.css
+++ b/index.css
@@ -30,3 +30,139 @@ body{
   overflow: hidden;
   width: 100%;
 }
+
+.searchBox{
+  width: 100%;
+  height: 300px;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  display: none;
+  flex-direction: column;
+  transition: opacity 0.5s ease-in;
+}
+
+.searchBox.visible{
+  opacity: 1;
+  visibility: visible;
+}
+
+.searchBox input{
+  width: 1053.998px;
+  border: none;
+  border-bottom: 1px solid black;
+  padding: 16px;
+}
+
+.search-container{
+  display: flex;
+  flex-direction: column;
+  font-size: 22px;
+  gap: 22px;
+}
+
+.search-container svg{
+  width: 35px;
+}
+
+.search-result{
+  display: flex;
+  gap: 25px;
+  flex-direction: column;
+}
+
+.search-result div{
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+@media screen and (max-width:600px){
+  .searchBox input{
+    width: 100%;
+  }
+}
+
+.feedback-container {
+  background: var(--background-colour-neutral-colour, #F2F2F2);
+  display: flex;
+  width: 100%;
+  height: 400px;
+  align-items: center;
+}
+
+.feedback-static {
+  flex: 1;
+  /* background-color: lightblue; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.feedback-slider {
+  flex: 2;
+  position: relative;
+  overflow: hidden;
+}
+
+.feedback-slider-wrapper {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.feedback-slide {
+  min-width: 50%;
+  box-sizing: border-box;
+}
+
+.feedback-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.feedback-prev, .feedback-next {
+  color: black;
+  border: none;
+  background-color: transparent;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin: 0 10px;
+  font-size: 16px;
+}
+
+@media (max-width: 600px) {
+  .feedback-container {
+    flex-direction: column;
+  }
+
+  
+
+  .feedback-static, .feedback-slider {
+    flex: none;
+    width: 100%;
+  }
+
+  .feedback-buttons {
+    margin-top: 10px;
+  }
+}
+
+.feedback-dots {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #bbb;
+  margin: 0 5px;
+  transition: background-color 0.3s ease;
+}
+
+.dot.active {
+  background-color: #000;
+}
